--- a/index.html
+++ b/index.html
@@ -13,7 +13,24 @@
 </head>
 
 <body>
+    <section class="skip-background flex-section">
+        <div id="skip" class="half-width">
+            <h1 class="section-skip-heading"><span class="textOrange">Skip</span> The Diet, <br> Just Eat Healthy
+                With</br>
+                HungryDeshi Network
+            </h1>
 
+            <p class="section-p-text"> Imagine you don't need a diet because we provide healthy and delicious food for
+                you!
+            </p>
+
+            <a class="order-button linkText" href="https://hungrynaki.com/restaurants">Order Food</a>
+        </div>
+
+        <div class="half-width">
+            <img src="images/female/Group 8425.png" alt="">
+        </div>
+    </section>
 </body>
 
 </html>
