[Add container class] Updater First Section

--- a/index.html
+++ b/index.html
@@ -13,22 +13,24 @@
 </head>
 
 <body>
-    <section class="skip-background flex-section">
-        <div id="skip" class="half-width">
-            <h1 class="section-skip-heading"><span class="textOrange">Skip</span> The Diet, <br> Just Eat Healthy
-                With</br>
-                HungryDeshi Network
-            </h1>
+    <section id="intro" class="container">
+        <div class="flex-div">
+            <div id="left_bar_intro" class="half-width">
+                <h1 class="intro_heading"><span class="text_orange">Skip</span> The Diet, <br> Just Eat Healthy
+                    With</br>
+                    HungryDeshi Network
+                </h1>
 
-            <p class="section-p-text"> Imagine you don't need a diet because we provide healthy and delicious food for
-                you!
-            </p>
+                <h2 class="text_green">Stay Home, Be Safe</h2>
 
-            <a class="order-button linkText" href="https://hungrynaki.com/restaurants">Order Food</a>
-        </div>
+                <p> Imagine you don't need a diet because we provide healthy and delicious food for you!</p>
 
-        <div class="half-width">
-            <img src="images/female/Group 8425.png" alt="">
+                <a class="order-button linkText" href="https://hungrynaki.com/restaurants">Order Food</a>
+            </div>
+
+            <div id="right_bar_intro" class="half-width">
+                <img src="images/female/Group 8425.png" alt="">
+            </div>
         </div>
     </section>
 </body>
