[Completed] About Us Section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,27 @@
             </div>
         </div>
     </section>
+
+    <section id="about" class="container">
+        <div class="flex-div">
+            <div id="left_bar_about" class="half-width">
+                <img src="images/female/Person Image.png" alt="">
+            </div>
+            <div id="right_bar_about" class="half-width">
+                <h1 class="headline align_center">About Hungry Deshi</h1>
+
+                <p class="justify_text"> It is the first online food delivery service in Bangladesh and a 100%
+                    Bangladeshi owned company that
+                    serves all around the country. Operating in 5 cities at this moment, namely in Dhaka, Narayanganj,
+                    Sylhet, Chittagong, and Coxbazar. Hungrynaki covers 1100+ restaurants across the nation.
+                </p>
+
+                <a class="contact-button linkText" href="https://hungrynaki.com/contact">Contact us</a>
+            </div>
+        </div>
+    </section>
+
+
 </body>
 
 </html>
