[Completed] Recipies Section Completed

--- a/index.html
+++ b/index.html
@@ -53,6 +53,39 @@
         </div>
     </section>
 
+    <section id="my_recepies" class="container">
+        <div class="width_50_auto">
+            <h1 class="headline align_center">Recepies</h1>
+
+            <p class="my_recipies_p align_center">
+                <strong>FEELING HUNGRY?</strong> JUST SEARCH YOUR MOUTH-WATERING FOODS FROM APPETIZING RECEPIES!
+            </p>
+        </div>
+
+        <div class="flex-div width_80_auto">
+            <div class="card">
+                <img src="images/food/Project Cover1.jpg" alt="">
+                <h3>Ghorer Khabar</h3>
+                <p>Fine Quality Steamed Rice (Katari bhog/Nazirshal), served with Thick Daal, Mixed Vegetable Bhaji
+                    and choice of Chicken...
+                </p>
+            </div>
+            <div class="card">
+                <img src="images/food/Project Cover5.png" alt="">
+                <h3>Bhorta Bahar</h3>
+                <p>Choose any five-Begun Bhorta, Aloo Bhorta, Daal Bhorta, Egg Bhorta, Chingri Bhorta, Shutki
+                    Bhorta, Mach Bhorta...
+                </p>
+            </div>
+            <div class="card">
+                <img src="images/food/Project Cover7.png" alt="">
+                <h3>Morogh Pulao</h3>
+                <p>Best Quality Kalijeera Rice Pulao cooked with local chicken served with Shammi Kabab Mixed
+                    Vegetable...
+                </p>
+            </div>
+        </div>
+    </section>
 
 </body>
 
