[Completed] Footer Section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,10 @@
         </div>
     </section>
 
+    <footer class="container">
+        <h1><span class="text_orange">Hungry-Deshi</span> <span class="text_transparent">Network</span></h1>
+        <p>Your trusted food partner</p>
+    </footer>
 </body>
 
 </html>
