[Completed] Testimonial Section

--- a/index.html
+++ b/index.html
@@ -87,6 +87,35 @@
         </div>
     </section>
 
+    <section id="my_recepies" class="container">
+        <div class="width_50_auto">
+            <h1 class="headline align_center">What People Think About Us?</h1>
+        </div>
+
+        <div class="flex-div width_80_auto">
+            <div class="card border_testimonial">
+                <img src="images/male/1.jpg" alt="">
+                <h3>Shakib Khan</h3>
+                <p>This was our last day in Cox-Bazar on vacation. We wanted to have lunch. This was
+                    definitely a win. They were excellent!
+                </p>
+            </div>
+            <div class="card border_testimonial">
+                <img src="images/male/2.jpg" alt="">
+                <h3>Sakib Al Hasan</h3>
+                <p>Thank you for dinner last night. It was amazing!! I have to say it’s the best meal I have had in
+                    quite some time. You will definitely be seeing more of me eating at your establishment.
+                </p>
+            </div>
+            <div class="card border_testimonial">
+                <img src="images/male/3.jpg" alt="">
+                <h3>Siyam</h3>
+                <p>We love your food which is why we frequent order foods from your restaurant.
+                </p>
+            </div>
+        </div>
+    </section>
+
     <footer class="container">
         <h1><span class="text_orange">Hungry-Deshi</span> <span class="text_transparent">Network</span></h1>
         <p>Your trusted food partner</p>
