[Final] Completed Full Project

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
     </section>
 
-    <section id="my_recepies" class="container">
+    <section id="testimonials" class="container">
         <div class="width_50_auto">
             <h1 class="headline align_center">What People Think About Us?</h1>
         </div>
@@ -112,6 +112,17 @@
                 <h3>Siyam</h3>
                 <p>We love your food which is why we frequent order foods from your restaurant.
                 </p>
+            </div>
+        </div>
+    </section>
+
+    <section id="newsletter" class="container">
+        <div class="width_50_auto">
+            <h1 class="headline align_center">Stay Connect With Us...</h1>
+            <div id="testimonial_signup">
+                <p>Special 15% Discount For Food Orders during lockdown.</p>
+                <input type="email" placeholder="Please Enter Your Email">
+                <button class="newsletter-button">Submit</button>
             </div>
         </div>
     </section>
