added-new-content

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <h1 class="headline align_center">Stay Connect With Us...</h1>
             <div id="testimonial_signup">
                 <p>Special 15% Discount For Food Orders during lockdown.</p>
-                <input type="email" placeholder="Please Enter Your Email">
+                <input type="email" class="inpits" placeholder="Please Enter Your Email">
                 <button class="newsletter-button">Submit</button>
             </div>
         </div>
